--- a/app/views/admin/dashboards/heatmap.html.erb
+++ b/app/views/admin/dashboards/heatmap.html.erb
@@ -3,8 +3,8 @@
 <div 
   class="container-fluid" 
   data-controller="map"
-  data-map-api-key-value="<%= ENV['GOOGLE_MAP_API_KEY'] %>"
-  data-map-routes-value='<%= @routes_data.to_json %>'
+  data-map-api-key-value="<%= Rails.application.credentials.GOOGLE_MAP_API_KEY %>"
+  data-map-routes-value="<%= @routes_data.to_json %>"
   data-map-start-marker-path-value="<%= asset_path('start_marker.svg') %>"
   data-map-end-marker-path-value="<%= asset_path('end_marker.svg') %>"
 >
