--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -43,7 +43,7 @@
 
               <div class="mb-3">
                 <label for="user_profile_postcode" class="form-label">郵便番号</label>
-                <p id="passwordHelpBlock" class="form-text">
+                <p id="postcodeHelpBlock" class="form-text">
                   居住地域の特定に使用します。ハイフンなしで入力してください。
                 </p>
                 <%= profile_form.text_field :postcode, class: "form-control" %>
@@ -51,9 +51,9 @@
 
               <div class="mb-3">
                 <label for="user_profile_num_of_objects" class="form-label">調査対象者の人数<span class="text-danger">*</span></label>
-                <div id="passwordHelpBlock" class="form-text">
+                <p id="numOfObjectsHelpBlock" class="form-text">
                   このアンケートの対象となる小学校高学年から高校生までの人数を入力してください。
-                </div>
+                </p>
                 <%= profile_form.number_field :num_of_objects, class: "form-control" %>
               </div>
             <% end %>
